--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:dev": "./node_modules/nodemon/bin/nodemon.js",
     "test": "jest && npm run lint",
     "lint": "eslint . --fix --ext js"
   },
@@ -42,6 +43,7 @@
     "husky": "^1.3.1",
     "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
+    "nodemon": "^1.18.11",
     "prettier": "^1.16.4"
   },
   "dependencies": {
